--- a/src/scss/helpers/_index.scss
+++ b/src/scss/helpers/_index.scss
@@ -139,7 +139,7 @@
 
 // misc
 .box-line { border: 1px solid $secondary-color; }
-.group { margin-bottom: 1rem; }
+.group { margin-bottom: $space-3; }
 .debug-line { @include debug; }
 .caret { @include caret('down'); }
 .arrow { @include arrow; }
