--- a/src/scss/parts/_form.scss
+++ b/src/scss/parts/_form.scss
@@ -146,7 +146,7 @@ input[type=color] {
 }
 
 .form-group {
-  margin-bottom: 1rem;
+  margin-bottom: $space-3;
 }
 
 //============================================================
