--- a/src/scss/parts/_input-group.scss
+++ b/src/scss/parts/_input-group.scss
@@ -3,7 +3,6 @@
   display: flex;
   align-items: stretch;
   width: 100%;
-  margin-bottom: 1rem; // temporary..
 
   > input,
   > select,
