--- a/src/scss/parts/_scaffolding.scss
+++ b/src/scss/parts/_scaffolding.scss
@@ -33,7 +33,7 @@ footer {
   }
 
   .footer-copyright {
-    padding: .5rem 0;
+    padding: $space-2 0;
     color: $footer-copyright-color;
     text-align: center;
     background-color: $footer-copyright-bg-color;
@@ -217,13 +217,13 @@ blockquote {
 // section
 @include media-tablet-up() {
   section.pad {
-    padding: 2rem 5%;
+    padding: $space-5 5%;
   }
 }
 
 @include media-only-mobile {
   section.pad {
-    padding: 2rem .5rem;
+    padding: $space-5 $space-2;
   }
 }
 
